styles.css
/* page */

body {
    margin: 0;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    display: flex;
    justify-content: center;
    align-items: center;
    color: black;
    transition: 0.5s;
}

#window {
    display: flex;
    flex-direction: row;
    width: 100vw;
    height: 100vh;
}

#sidebar {
    min-width: 250px;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    background: rgb(245, 245, 245);
    border-right: 1px solid rgba(230, 230, 230);
}

@media screen and (orientation: portrait) {
    #sidebar {
        display: none;
    }
}

#home {
    min-height: 70px;
    padding-bottom: 10px;
    font-family: -apple-system, Helvetica;
    font-size: 26px;
    font-weight: bold;
    width: 75%;
    height: 15px;
    display: flex;
    align-items: flex-end;
    cursor: pointer;
}

#navigation {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    height: 100%;
    overflow: scroll;
    padding-bottom: 15px;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

#navigation::-webkit-scrollbar {
    display: none;
}

.section {
    width: 75%;
    height: 10px;
    padding-top: 20px;
    padding-bottom: 10px;
    color: rgb(105, 105, 105);
    font-family: -apple-system, Helvetica;
    font-size: 10px;
    font-weight: bold;
    display: flex;
    align-items: center;
}

.link {
    width: 75%;
    height: 15px;
    padding: 10px;
    border-radius: 7px;
    margin-bottom: 5px;
    font-family: -apple-system, Helvetica;
    font-size: 14px;
    display: flex;
    align-items: center;
    flex-direction: row;
    text-decoration: none;
    cursor: pointer;
    color: black;
}

.selected {
    cursor: default;
}

.link:hover:not(#home):not(.selected), .selected:not(#home) {
    background: black;
    color: white;
}

.link:hover>.glyph, .selected>.glyph {
    opacity: 1;
    filter: invert(1);
    -webkit-filter: invert(1);
}

.glyph {
    opacity: 0.6;
    width: 16px;
    height: 16px;
    margin-right: 10px;
}

#container {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#highlight {
    height: -moz-calc(100% - 100px);
    height: -webkit-calc(100% - 100px);
    height: calc(100% - 100px);
    width: -moz-calc(100% - 250px - 100px);
    width: -webkit-calc(100% - 250px - 100px);
    width: calc(100% - 250px - 100px);
    position: absolute;
    z-index: 1000;
    object-fit: contain;
    transition: 0.5s;
    display: none;
    opacity: 0;
    cursor: pointer;
}

.enlarge {
    animation: enlarge ease 0.5s;
    animation-iteration-count: 1; 
    animation-fill-mode: forwards;
}

@keyframes enlarge { 
    0% {
        opacity: 0;
        transform: scale(0.5);
    }
    100% {
        opacity: 1;
        transform: scale(1);
    }
}

.minimize {
    animation: minimize ease 0.5s;
    animation-iteration-count: 1; 
    animation-fill-mode: forwards;
}

@keyframes minimize { 
    0% {
        opacity: 1;
        transform: scale(1);
    }
    100% {
        opacity: 0;
        transform: scale(0.5);
    }
}

#destination {
    overflow: scroll;
    border: none;
    width: 100%;
    height: 100%;
    min-width: 700px;
}

/* STYLES FOR NAVIGATION PAGES */

/* page */

#page {
    width: -moz-calc(100% - 100px);
    width: -webkit-calc(100% - 100px);
    width: calc(100% - 100px);
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 50px;
    margin: 0 auto;
    animation: fadeIn ease 1.5s;
    animation-iteration-count: 1; 
    animation-fill-mode: forwards;
    transition: 0.5s;
}

#loading {
    width: 100%;
    height: 100%;
    opacity: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
}

.fadeIn {
    animation: fadeIn ease 1.5s;
    animation-iteration-count: 1; 
    animation-fill-mode: forwards;
}

@keyframes fadeIn { 
    0% {
        opacity: 0;
        transform: translate(25px, 0);
    }
    100% {
        opacity: 1;
    }
}

/* frontpage */

#overview {
    margin-top: 25px;
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    flex-wrap: wrap;
    width: 100%;
}

.viewMax {
    height: 32vw;
    margin-top: 25px;
    text-decoration: none;
    width: 100%;
}

.view {
    height: 24vw;
    margin-top: 25px;
    text-decoration: none;
    width: -moz-calc((100% - 25px) / 2);
    width: -webkit-calc((100% - 25px) / 2);
    width: calc((100% - 25px) / 2);
}

.viewContent {
    width: 100%;
    height: 100%;
    border-radius: 10px;
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    overflow: hidden;
    transition: 0.5s;
    background: rgb(240, 240, 240);
    cursor: pointer;
    border: 1px solid rgb(230, 230, 230);
}

.viewContent:hover:not(:active), .selfie:hover:not(:active) {
    background: white;
    transform: scale(1.02, 1.02);
    box-shadow: 0 0 40px rgba(0, 0, 0, 0.25);
}

.viewContent:active, .selfie:active {
    background: white;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}

.viewMaxTitle {
    display: flex;
    position: relative;
    justify-content: center;
    flex-direction: column;
    font-family: -apple-system, Helvetica;
    font-size: 5vw;
    font-weight: bold;
    margin: 3vw;
    width: 100%;
    z-index: 1000;
    color: white;
}

.viewTitle {
    display: flex;
    position: relative;
    justify-content: center;
    flex-direction: column;
    font-family: -apple-system, Helvetica;
    font-size: 3vw;
    font-weight: bold;
    margin: 3vw;
    width: 20%;
    z-index: 1000;
}

.viewMaxImage {
    position: absolute;
    object-fit: cover;
    width: 100%;
    height: 100%;
}

.viewImage {
    position: absolute;
    object-fit: cover;
    width: 100%;
    height: 100%;
}

.selfie {
    width: 100%;
    height: 100%;
    background: rgba(255, 255, 255, 0.05);
    position: relative;
    display: flex;
    align-items: flex-end;
    overflow: hidden;
    justify-content: center;
    text-align: center;
    border-radius: 10px;
    transition: 0.5s;
    cursor: pointer;
}

.selfieTitle {
    display: flex;
    position: absolute;
    justify-content: flex-end;
    font-family: -apple-system, Helvetica;
    font-size: 2.5vw;
    color: white;
    flex-direction: column;
    padding-bottom: 4vw;
}

.selfieImage {
    width: 100%;
    height: 100%;
    object-fit: cover;
    align-self: flex-start;
}

/* page */

#menu {
    min-height: 70px;
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    justify-content: space-between;
    font-family: -apple-system, Helvetica;
    font-size: 20px;
    padding-bottom: 15px;
    border-bottom: 1px solid rgb(220, 220, 220);
}

#external {
    font-family: -apple-system, Helvetica;
    font-size: 13px;
    opacity: 1;
    text-decoration: none;
    cursor: pointer;
    color: black;
}

#external:hover {
    text-decoration: underline;
}

#header {
    margin-top: 100px;
    margin-bottom: 25px;
    display: flex;
    position: relative;
    justify-content: center;
    flex-direction: column;
    text-align: center;
    font-family: -apple-system, Helvetica;
    font-size: 55px;
    font-weight: bold;
}

#product {
    margin-top: 50px;
    width: min(1600px, 100%);
    margin-bottom: 150px;
}

#CV, #adobe-dc-view {
    margin-top: 50px;
    width: 100%;
    box-shadow: 0 0 3vw rgba(0, 0, 0, 0.15);
}

#content {
    width: -moz-calc(100% - 200px);
    width: -webkit-calc(100% - 200px);
    width: calc(100% - 200px);
    margin-bottom: 50px;
}

.screenshots {
    width: min(900px, 100%);
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    margin-top: -25px;
}

.screenshotFigure {
    height: 100%;
    width: -moz-calc((100% - 25px) / 2);
    width: -webkit-calc((100% - 25px) / 2);
    width: calc((100% - 25px) / 2);
    margin-top: 25px;
    cursor: pointer;
    transition: 0.5s;
}

.screenshotMac {
    height: 100%;
    width: -moz-calc((100% - 50px) / 3);
    width: -webkit-calc((100% - 50px) / 3);
    width: calc((100% - 50px) / 3);
    margin-top: 25px;
    cursor: pointer;
    transition: 0.5s;
}

.screenshotPhone {
    height: 100%;
    width: -moz-calc((100% - 100px) / 5);
    width: -webkit-calc((100% - 100px) / 5);
    width: calc((100% - 100px) / 5);
    margin-top: 25px;
    cursor: pointer;
    transition: 0.5s;
}

.screenshotMax {
    height: 100%;
    width: 100%;
    margin-top: 25px;
    border-radius: 6px;
}

.screenshotFigure:hover:not(:active), .screenshotMac:hover:not(:active), .screenshotPhone:hover:not(:active) {
    transform: scale(1.1, 1.1);
}

.screenshotFigure:active, .screenshotMac:active, .screenshotPhone:active {
    transform: scale(1.5, 1.5);
}

.divider {
    margin-top: 25px;
    margin-bottom: 25px;
    width: min(900px, 100%);
    height: 1px;
    background: rgb(220, 220, 220);
}

.horizontal {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: min(900px, 100%);
    align-items: flex-start;
    min-height: 40px;
}

.external {
    margin-top: 7px;
    width: 14px;
    height: 14px;
    opacity: 0.5;
    cursor: pointer;
}

.external:hover {
    opacity: 1;
}

.title {
    font-family: -apple-system, Helvetica;
    font-size: 20px;
    display: flex;
    flex-direction: row;
}

.text {
    font-family: Helvetica;
    font-size: 13px;
    line-height: 1.7;
    width: min(900px, 100%);
}

/* embed */

iframe:not(#destination) {
    width: min(900px, 100%);
    height: 500px;
    border: 1px solid rgb(220, 220, 220);
    border-radius: 6px;
}

.emgithub-container {
    width: min(900px, 100%);
    overflow: auto;
    margin-top: -18px;
}

.emgithub-container .js.hljs {
    max-height: 500px;
    overflow: auto;
}

.emgithub-container .swift.hljs {
    max-height: 500px;
    overflow: auto;
}

.emgithub-container .py.hljs.python {
    max-height: 500px;
    overflow: auto;
}

.gist {
    width: min(900px, 100%);
    overflow: auto;
}

.gist .blob-wrapper.data {
    max-height: 500px;
    overflow: auto;
}

